keepcalm-web/src-tauri/cargo_log.txt
cargo :     Checking 
keepcalm-web v0.1.0 (C:
\Users\ryhan_Schutz\Doc
uments\keepcalm_Web\kee
pcalm_web\keepcalm-web\
src-tauri)
No linha:1 caractere:1
+ cargo check 2>&1 | 
Out-File -FilePath 
cargo_log.txt 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : 
NotSpecified:     (    
Checking ke...-    
web\src-tauri):Strin   
 g) [], RemoteExcepti  
  on
    + 
FullyQualifiedErro    
rId : NativeCommandE   
 rror
 
error[E0433]: failed 
to resolve: could not 
find `bridge` in 
`config`
  --> src\network\tor.r
s:49:75
   |
49 |                 
let bridge_cfg = bridge
_line.parse::<arti_clie
nt::config::bridge::Bri
dgeConfig>()?;
   |                   
                       
                       
          ^^^^^^ could 
not find `bridge` in 
`config`

error[E0433]: failed 
to resolve: could not 
find `DownloadEvent` 
in `tauri`
  --> src\commands\tabs
.rs:79:24
   |
79 |                 ta
uri::DownloadEvent::Req
uested { url, 
destination } => {
   |                   
     ^^^^^^^^^^^^^ 
could not find 
`DownloadEvent` in 
`tauri`
   |
help: consider 
importing this enum
   |
 1 + use tauri::webview
::DownloadEvent;
   |
help: if you import 
`DownloadEvent`, refer 
to it directly
   |
79 -                 ta
uri::DownloadEvent::Req
uested { url, 
destination } => {
79 +                 Do
wnloadEvent::Requested 
{ url, destination } 
=> {
   |

error[E0433]: failed 
to resolve: could not 
find `DownloadEvent` 
in `tauri`
  --> src\commands\tabs
.rs:90:24
   |
90 |                 ta
uri::DownloadEvent::Fin
ished { .. } => {
   |                   
     ^^^^^^^^^^^^^ 
could not find 
`DownloadEvent` in 
`tauri`
   |
help: consider 
importing this enum
   |
 1 + use tauri::webview
::DownloadEvent;
   |
help: if you import 
`DownloadEvent`, refer 
to it directly
   |
90 -                 ta
uri::DownloadEvent::Fin
ished { .. } => {
90 +                 Do
wnloadEvent::Finished 
{ .. } => {
   |

error[E0433]: failed 
to resolve: could not 
find `DownloadEvent` 
in `tauri`
  --> src\commands\tabs
.rs:94:24
   |
94 |                 ta
uri::DownloadEvent::Pro
gress { downloaded, 
total } => {
   |                   
     ^^^^^^^^^^^^^ 
could not find 
`DownloadEvent` in 
`tauri`
   |
help: consider 
importing this enum
   |
 1 + use tauri::webview
::DownloadEvent;
   |
help: if you import 
`DownloadEvent`, refer 
to it directly
   |
94 -                 ta
uri::DownloadEvent::Pro
gress { downloaded, 
total } => {
94 +                 Do
wnloadEvent::Progress 
{ downloaded, total } 
=> {
   |

error[E0282]: type 
annotations needed
  --> src\commands\tabs
.rs:81:65
   |
81 | ...   let 
filename = destination.
file_name().map(|n| n.t
o_string_lossy().to_str
ing()).unwrap_or_else(|
| "download".to_string(
));
   |                   
                       
         ^  - type 
must be known at this 
point
   |
help: consider giving 
this closure parameter 
an explicit type
   |
81 |                   
  let filename = destin
ation.file_name().map(|
n: /* Type */| n.to_str
ing_lossy().to_string()
).unwrap_or_else(|| "do
wnload".to_string());
   |                   
                       
                       
 ++++++++++++

error[E0599]: no 
method named 
`add_bridge` found for 
mutable reference 
`&mut 
BridgesConfigBuilder` 
in the current scope
  --> src\network\tor.r
s:50:42
   |
50 |                 co
nfig_builder.bridges().
add_bridge(bridge_cfg);
   |                   
                       
^^^^^^^^^^ method not 
found in `&mut 
BridgesConfigBuilder`

error[E0599]: no 
method named 
`allow_onion_addrs` 
found for mutable 
reference `&mut ClientA
ddrConfigBuilder` in 
the current scope
  --> src\network\tor.r
s:54:45
   |
54 |             config
_builder.address_filter
().allow_onion_addrs(tr
ue);
   |                   
                       
   ^^^^^^^^^^^^^^^^^
   |
help: there is a 
method 
`allow_local_addrs` 
with a similar name
   |
54 -             config
_builder.address_filter
().allow_onion_addrs(tr
ue);
54 +             config
_builder.address_filter
().allow_local_addrs(tr
ue);
   |

Some errors have 
detailed explanations: 
E0282, E0433, E0599.
For more information 
about an error, try 
`rustc --explain 
E0282`.
error: could not 
compile `keepcalm-web` 
(lib) due to 7 
previous errors
